# LLM-Translator-Adapter

./: Cargo.toml
.github/workflows/: manual-release.yml
src/: main.rs
