[package]
name = "openai-api-proxy"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7", features = ["matched-path"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
env_logger = "0.10"
log = "0.4"
toml = "0.8"
config = "0.13"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
